--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,78 @@ body.active-modal {
     display: initial;
   }
 }
+
+.scrollbar-c-s-o::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-ie-e-ff {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+//Animation for text
+  textOverImage {
+    background-size: cover !important;
+  }
+
+.textOverImage {
+  position: relative;
+  width: 230px;
+  height: 150px;
+  float: left;
+  margin: 20px 20px;
+  overflow: hidden;
+  border-radius: 3px;
+  box-shadow: 0 0 4px #000;
+}
+
+.textOverImage:hover {
+  background-size: 110%;
+}
+
+.textOverImage:before {
+  position: absolute;
+  top: 0;
+  bottom: -40px;
+  left: 0;
+  right: 0;
+  transform: translateY(
+    90%
+  ); /*use transform:translateY(100%); to remove footer*/
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #fff;
+  content: attr(data-title);
+  transition: 0.1s 0.1s;
+  padding-top: 14px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.textOverImage:after {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: #fff;
+  content: attr(data-text);
+  transition: 0.5s;
+  padding-top: 5em;
+  margin-top: 8px;
+  transform: translateY(100%);
+  opacity: 0;
+}
+
+.textOverImage:hover:after {
+  transform: translateY(0);
+  transition: 0.5s 0.1s;
+  opacity: 1;
+}
+.textOverImage:hover:before {
+  transform: translateY(0);
+  background-color: rgba(0, 0, 0, 0.6);
+  transition: 0.5s;
+}
